--- a/Templates/layouts/partials/nav_links.html
+++ b/Templates/layouts/partials/nav_links.html
@@ -3,6 +3,9 @@
   <a class="nav-link" href="{{ url_for('show_home') }}"><i class="fas fa-home me-1"></i> Home</a>
 </li>
 <li class="nav-item">
+  <a class="nav-link" href="{{ url_for('report_lost') }}"><i class="fas fa-download me-1"></i> Report&nbsp;Lost</a>
+</li>
+<li class="nav-item">
   <a class="nav-link" href="{{ url_for('report_found') }}"><i class="fas fa-upload me-1"></i> Report&nbsp;Found</a>
 </li>
 <li class="nav-item">
